# zephyr-flight-controller-firmware

./: .gitignore  CMakeLists.txt  README.md  prj.conf
drivers/spi/nrf24l01/: CMakeLists.txt  Kconfig  nrf24l01.c  nrf24l01.h
dts/bindings/spi/: nordic,nrf24l01.yaml
overlay/: bme280.overlay  nrf24l01.overlay
src/: main.c
